# perception_pcl

./: .gitignore  .travis.sh  .travis.yml  CHANGELOG.rst  CMakeLists.txt  Makefile  README.md  README.rst  package.xml  rosdep.yaml  stack.xml
cminpack/: Makefile  cminpack-1.1.3.tar.gz.md5sum  manifest.xml
flann/: Makefile  doc.patch  flann-1.6.10-src.zip.md5sum  flann-1.7.1-src.zip.md5sum  hist_intersect_union.patch  manifest.xml
include/pcl_conversions/: pcl_conversions.h
include/pcl_ros/: point_cloud.h
pcl/: CMakeLists.txt  Makefile  manifest.xml  package.xml
pcl16/: Makefile  manifest.xml  stack.xml
pcl16_ros/: CMakeLists.txt  manifest.xml
pcl16_ros/include/pcl16_ros/: point_cloud.h  publisher.h  transforms.h
pcl16_ros/src/pcl16_ros/: transforms.cpp
pcl17/: Makefile  README  manifest.xml  stack.xml
pcl17_ros/: CMakeLists.txt  manifest.xml
pcl17_ros/include/pcl17_ros/: point_cloud.h  publisher.h  transforms.h
pcl17_ros/include/pcl17_ros/impl/: transforms.hpp
pcl17_ros/src/pcl17_ros/: transforms.cpp
pcl_conversions/: CHANGELOG.rst  CMakeLists.txt  package.xml
pcl_conversions/include/pcl_conversions/: pcl_conversions.h
pcl_conversions/test/: test_pcl_conversions.cpp
pcl_msgs/: CMakeLists.txt
pcl_ros/: CHANGELOG.rst  CMakeLists.txt  Makefile  mainpage.dox  manifest.xml  package.xml  pcl_nodelets.xml
pcl_ros/cfg/: EuclideanClusterExtraction.cfg  ExtractIndices.cfg  ExtractPolygonalPrismData.cfg  Feature.cfg  Filter.cfg  Filter_common.py  MLS.cfg  SACSegmentation.cfg  SACSegmentationFromNormals.cfg  SACSegmentation_common.py  SegmentDifferences.cfg  StatisticalOutlierRemoval.cfg  VoxelGrid.cfg  common.py
pcl_ros/include/pcl_ros/: node_lazy.hpp  pcl_node.h  pcl_node.hpp  pcl_nodelet.h  pcl_nodelet.hpp  point_cloud.h  point_cloud.hpp  ptr_helper.h  publisher.h  publisher.hpp  tf_helper.hpp  transforms.h  transforms.hpp
pcl_ros/include/pcl_ros/features/: boundary.h  boundary.hpp  feature.h  feature.hpp  fpfh.h  fpfh.hpp  fpfh_omp.h  fpfh_omp.hpp  moment_invariants.h  moment_invariants.hpp  normal_3d.h  normal_3d.hpp  normal_3d_omp.h  normal_3d_omp.hpp  normal_3d_tbb.h  normal_3d_tbb.hpp  pfh.h  pfh.hpp  principal_curvatures.h  principal_curvatures.hpp  shot.h  shot.hpp  shot_omp.h  shot_omp.hpp  vfh.h  vfh.hpp
pcl_ros/include/pcl_ros/filters/: crop_box.h  crop_box.hpp  extract_indices.h  extract_indices.hpp  filter.h  filter.hpp  passthrough.h  passthrough.hpp  project_inliers.h  project_inliers.hpp  radius_outlier_removal.h  radius_outlier_removal.hpp  statistical_outlier_removal.h  statistical_outlier_removal.hpp  voxel_grid.h  voxel_grid.hpp
pcl_ros/include/pcl_ros/impl/: transforms.hpp
pcl_ros/include/pcl_ros/io/: bag_io.h  bag_io.hpp  concatenate_data.h  concatenate_data.hpp  concatenate_fields.h  concatenate_fields.hpp  pcd_io.h  pcd_io.hpp
pcl_ros/include/pcl_ros/segmentation/: extract_clusters.h  extract_clusters.hpp  extract_polygonal_prism_data.h  extract_polygonal_prism_data.hpp  sac_segmentation.h  sac_segmentation.hpp  segment_differences.h  segment_differences.hpp
pcl_ros/include/pcl_ros/surface/: convex_hull.h  convex_hull.hpp  moving_least_squares.h  moving_least_squares.hpp
pcl_ros/launch/demos/: manager.launch  play_table_scene_mug_textured.launch  table_scene_mug_textured.vcg
pcl_ros/launch/demos/table_scene_mug_textured/: cylinder_segmentation_normals.launch  extract_object_clusters.launch  passthrough.launch  planar_convex_hull.launch  plane_segmentation.launch  plane_segmentation_normals.launch  voxelgrid.launch
pcl_ros/samples/: sample_statistical_outlier_removal.launch  sample_voxel_grid.launch
pcl_ros/samples/pcl_ros/segmentation/: sample_extract_clusters.launch
pcl_ros/src/: transforms.cpp
pcl_ros/src/pcl_ros/: transforms.cpp
pcl_ros/src/pcl_ros/features/: boundary.cpp  feature.cpp  fpfh.cpp  fpfh_omp.cpp  moment_invariants.cpp  normal_3d.cpp  normal_3d_omp.cpp  normal_3d_tbb.cpp  pfh.cpp  principal_curvatures.cpp  shot.cpp  shot_omp.cpp  vfh.cpp
pcl_ros/src/pcl_ros/filters/: crop_box.cpp  extract_indices.cpp  filter.cpp  passthrough.cpp  project_inliers.cpp  radius_outlier_removal.cpp  statistical_outlier_removal.cpp  voxel_grid.cpp
pcl_ros/src/pcl_ros/filters/features/: boundary.cpp  feature.cpp  fpfh.cpp  fpfh_omp.cpp  moment_invariants.cpp  normal_3d.cpp  normal_3d_omp.cpp  normal_3d_tbb.cpp  pfh.cpp  principal_curvatures.cpp  vfh.cpp
pcl_ros/src/pcl_ros/io/: bag_io.cpp  concatenate_data.cpp  concatenate_fields.cpp  io.cpp  pcd_io.cpp
pcl_ros/src/pcl_ros/segmentation/: extract_clusters.cpp  extract_polygonal_prism_data.cpp  sac_segmentation.cpp  segment_differences.cpp  segmentation.cpp
pcl_ros/src/pcl_ros/surface/: convex_hull.cpp  moving_least_squares.cpp  surface.cpp
pcl_ros/src/test/: test_tf_message_filter_pcl.cpp
pcl_ros/src/tools/: CMakeLists.txt  bag_to_pcd.cpp  convert_pcd_to_image.cpp  convert_pointcloud_to_image.cpp  pcd_to_pointcloud.cpp  pointcloud_to_pcd.cpp
pcl_ros/test/: CMakeLists.txt  bagreader.xml  test_bagread_publish.cpp  test_bagread_subscribe.cpp  test_io.cpp  test_passing.cpp  test_passing_inter_process.test  test_passing_intra_process.test
pcl_ros/tests/filters/: CMakeLists.txt  dummy_point_cloud2_publisher.cpp  test_filter_component.py  test_filter_executable.py  test_filters_launch.py
pcl_ros/tools/: bag_to_pcd.cpp  convert_pcd_to_image.cpp  convert_pointcloud_to_image.cpp  pcd_to_pointcloud.cpp  pointcloud_to_pcd.cpp
perception_pcl/: CHANGELOG.rst  CMakeLists.txt  package.xml
pointcloud_to_laserscan/: CHANGELOG.rst  CMakeLists.txt  README.md  nodelets.xml  package.xml
pointcloud_to_laserscan/include/pointcloud_to_laserscan/: PointCloudToLaserScanBase.h  pointcloud_to_laserscan_nodelet.h
pointcloud_to_laserscan/launch/: sample_node.launch  sample_nodelet.launch
pointcloud_to_laserscan/src/: PointCloudToLaserScanBase.cpp  PointCloudToLaserScanNodelet.cpp  pointcloud_to_laserscan_base.cpp  pointcloud_to_laserscan_node.cpp  pointcloud_to_laserscan_nodelet.cpp
test/: test_pcl_conversions.cpp
(+1 files in other folders)
