<package>
  <name>pcl_msgs</name>
  <version>0.1.0</version>
  <description>
<p>
  Package containing PCL (Point Cloud Library)-related ROS messages.
</p>
  </description>
  <author>Open Perception</author>
  <author email="jkammerl@willowgarage.com">Julius Kammerl</author>
  <author email="william@osrfoundation.org">William Woodall</author>
  <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/pcl-msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
