<package>
  <name>pcl</name>
  <version>1.6.0</version>
  <description>The Point Cloud Library (or PCL) for point cloud processing - development
    The PCL framework contains numerous state-of-the art algorithms including
    filtering, feature estimation, surface reconstruction, registration, model
    fitting and segmentation.</description>
  <maintainer email="jkammerl@willowgarage.com">Julius Kammerl</maintainer>
  <author>Open Perception</author>
  <license>BSD</license>

  <url type="website">http://www.pointclouds.org</url>
  <url type="bugtracker">http://dev.pointclouds.org</url>
  <url type="repository">https://github.com/wg-debs/pcl</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>cpp_common</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>flann</build_depend>
  <build_depend>libmysqlclient-dev</build_depend>
  <build_depend>libqhull</build_depend>
  <build_depend>libusb-1.0-dev</build_depend>
  <build_depend>libvtk</build_depend>
  <build_depend>python-sphinx</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>roscpp_traits</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>pcl_msgs</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>cpp_common</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>flann</run_depend>
  <run_depend>libmysqlclient-dev</run_depend>
  <run_depend>libqhull</run_depend>
  <run_depend>libusb-1.0-dev</run_depend>
  <run_depend>libvtk</run_depend>
  <run_depend>python-sphinx</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>roscpp_traits</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>pcl_msgs</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
