<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pcl_conversions</name>
  <version>1.6.2</version>
  <description>Provides conversions from PCL data types and ROS message types</description>

  <author email="william@osrfoundation.org">William Woodall</author>
  <author email="ankl@kth.se">Andreas Klintberg</author>

  <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>
  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>

  <license>BSD</license>

  <url>http://wiki.ros.org/pcl_conversions</url>
  <url type="repository">https://github.com/ros-perception/perception_pcl</url>
  <url type="bugtracker">https://github.com/ros-perception/perception_pcl/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>libpcl-all-dev</build_export_depend>
  <build_export_depend>pcl_msgs</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <test_depend>eigen</test_depend>
  <test_depend>libpcl-all-dev</test_depend>
  <test_depend>pcl_msgs</test_depend>
  <test_depend>roscpp</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>std_msgs</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>