<?xml version="1.0"?>
<package format="2">
  <name>pcl_conversions</name>
  <version>1.7.1</version>
  <description>Provides conversions from PCL data types and ROS message types</description>

  <author email="william@osrfoundation.org">William Woodall</author>

  <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>
  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>

  <license>BSD</license>

  <url>http://wiki.ros.org/pcl_conversions</url>
  <url type="repository">https://github.com/ros-perception/perception_pcl</url>
  <url type="bugtracker">https://github.com/ros-perception/perception_pcl/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>libpcl-all-dev</build_export_depend>
  <build_export_depend>pcl_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <test_depend>eigen</test_depend>
  <test_depend>libpcl-all-dev</test_depend>
  <test_depend>pcl_msgs</test_depend>
  <test_depend>roscpp</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>std_msgs</test_depend>

</package>
