<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pcl_ros</name>
  <version>2.0.0</version>
  <description>

  PCL (Point Cloud Library) ROS interface stack. PCL-ROS is the preferred
  bridge for 3D applications involving n-D Point Clouds and 3D geometry
  processing in ROS.

  </description>

  <author>Open Perception</author>
  <author email="julius@kammerl.de">Julius Kammerl</author>
  <author email="william@osrfoundation.org">William Woodall</author>
  <author>Andreas Klintberg</author>

  <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>
  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/perception_pcl</url>
  <url type="bugtracker">https://github.com/ros-perception/perception_pcl/issues</url>
  <url type="repository">https://github.com/ros-perception/perception_pcl</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>eigen</depend>
  <depend>boost</depend>
  <depend>message_filters</depend>
  <depend>libpcl-all-dev</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rosbag2</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
